# gtest-bootstrap

./: LICENSE  MODULE.bazel
bootstrap/: BUILD  something.cpp  something.h  test.cpp
